tests/baselines/reference/classIsSubtypeOfBaseType.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classIsSubtypeOfBaseType.ts(11,7): error TS2415: Class 'Derived2' incorrectly extends base class 'Base<{ bar: 文字; }>'.
  Types of property 'foo' are incompatible.
    Type '{ bar?: 文字; }' is not assignable to type '{ bar: 文字; }'.
      Property 'bar' is optional in type '{ bar?: 文字; }' but required in type '{ bar: 文字; }'.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classIsSubtypeOfBaseType.ts (1 errors) ====
    class Base<T> {
        foo: T;
    }
    
    class Derived extends Base<{ bar: string; }> {
        foo: {
            bar: string; baz: number; // ok
        }
    }
    
    class Derived2 extends Base<{ bar: string; }> {
          ~~~~~~~~
!!! error TS2415: Class 'Derived2' incorrectly extends base class 'Base<{ bar: 文字; }>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type '{ bar?: 文字; }' is not assignable to type '{ bar: 文字; }'.
!!! error TS2415:       Property 'bar' is optional in type '{ bar?: 文字; }' but required in type '{ bar: 文字; }'.
        foo: {
            bar?: string; // error
        }
    }